feat: InvitationPerson 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@
 @import './components/common/Maple';
 @import './components/DeleteModal';
 @import './components/RsvpForm';
+@import './components/InvitationPerson';
 
 // sections
 @import './components/sections/Hero';
