--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,8 +1,9 @@
-$backgroundBody: #f7b3b3;
-$backgroundWhite: #fafbfc;
-$weddingTitleColor: #ffcbd4;
+$backgroundBody: #f5f5f5;
+$backgroundWhite: #fff;
+$weddingTitleColor: #8B4513;
 $weddingMainTextColor: #544f4f;
-$weddingSubTextColor: #a39f9f;
+$weddingSubTextColor: #BC8F8F;
+$weddingNameColor: #D2B48C;
 
 $breakpoint-mobile: 300px;
 $breakpoint-tabletToMobile: 601px;
