--- a/src/components/sections/_Invitation.scss
+++ b/src/components/sections/_Invitation.scss
@@ -23,7 +23,7 @@
         }
 
         &-sub {
-            color: $weddingMainTextColor;
+            color: $weddingSubTextColor;
             font-size: 30px;
 
             @include mobile {
@@ -33,7 +33,7 @@
     }
 
     &__intro {
-        color: $weddingSubTextColor;
+        color: $weddingMainTextColor;
         font-size: 24px;
         text-align: center;
         margin-top: 50px;
@@ -68,5 +68,14 @@
         @include mobile {
             font-size: 16px;
         }
+    }
+
+    &__person-box {
+        margin-top: 100px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
     }
 }
