--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,17 +1,9 @@
 @charset "utf-8";
 
+
 body {
   margin: 0;
-  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  //   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  //   sans-serif;
-  // font-family: 'NanumDdarEGeEomMaGa';
-  // font-family: nanum gothic, sans-serif;
-  font-family: 'MaruBuriExtraLight';
-  font-family: 'MaruBuriLight';
-  font-family: 'MaruBuri';
-  font-family: 'MaruBuriBold';
-  font-family: 'MaruBuriSemiBold';
+  font-family: 'GowunBatang-Regular';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
