--- a/src/components/_Bgm.scss
+++ b/src/components/_Bgm.scss
@@ -1,5 +1,5 @@
 .bgm {
-  position: absolute;
+  position: fixed;
   top: 20px;
   right: 40px;
   z-index: 10;
@@ -14,7 +14,6 @@
   &__icon {
     width: 35px;
     height: 35px;
-
 
     @include mobile {
       width: 27px;
