--- a/src/components/_Footer.scss
+++ b/src/components/_Footer.scss
@@ -53,7 +53,11 @@
       position: absolute;
       width: 100%;
       height: 50px;
-      background: linear-gradient(to top, rgba(255, 255, 255, 0), $backgroundWhite);
+      background: linear-gradient(
+        to top,
+        rgba(255, 255, 255, 0),
+        $backgroundWhite
+      );
       z-index: 2;
     }
 
@@ -63,8 +67,35 @@
       bottom: 0;
       width: 100%;
       height: 50px;
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 0), $backgroundWhite);
+      background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0),
+        $backgroundWhite
+      );
       z-index: 2;
     }
+  }
+
+  &__move-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+  }
+
+  &__move-btn {
+    width: 35px;
+    height: 35px;
+    animation: motion 0.5s linear 0s infinite alternate;
+  }
+}
+
+@keyframes motion {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
   }
 }
