--- a/src/components/sections/_Hero.scss
+++ b/src/components/sections/_Hero.scss
@@ -1,24 +1,62 @@
 .hero {
   &__inner {
     width: 100%;
-    height: 800px;
     overflow: hidden;
     position: relative;
 
-    @include mobile {
-      height: 700px;
-    }
+    // @include mobile {
+    //   height: 700px;
+    // }
   }
 
-  img {
-    max-width: 800px;
-    filter: grayscale(100%);
+  &__images {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 20px;
+    position: relative;
 
-    @include mobile {
+    &-main {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      max-width: 600px;
+      max-width: 800px;
+      // filter: grayscale(100%);
+
+      @include mobile {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        max-width: 600px;
+      }
+    }
+
+    &-sub {
+      position: absolute;
+      top: 0;
+      right: 0;
+
+      @include mobile {
+        width: 200px;
+        height: 200px;
+        right: 20px;
+      }
     }
   }
+
+  &__text-image {
+    margin-top: 50px;
+
+    img {
+      width: 100%;
+    }
+  }
+  // img {
+  //   max-width: 800px;
+  //   filter: grayscale(100%);
+
+  //   @include mobile {
+  //     width: 100%;
+  //     height: 100%;
+  //     object-fit: cover;
+  //     max-width: 600px;
+  //   }
+  // }
 }
