--- a/src/components/common/_Accordion.scss
+++ b/src/components/common/_Accordion.scss
@@ -4,7 +4,7 @@
   margin-top: 20px;
   position: relative;
   width: 100%;
-
+  border-radius: 5px;
   max-height: 40px;
   overflow: hidden;
   transition: max-height 0.5s ease;
@@ -27,6 +27,7 @@
   }
 
   &__icon {
+    padding: 5px 10px;
     transition: all 0.2s ease-in;
     cursor: pointer;
   }
