feat: 카카오톡 공유 이미지 추가

--- a/src/_App.scss
+++ b/src/_App.scss
@@ -8,10 +8,13 @@
   box-sizing: content-box;
   background-color: $backgroundWhite;
 
+  @include tablet {
+    max-width: 700px;
+  }
+
   @include mobile {
     margin: 0;
     max-width: 600px;
     padding: 0;
   }
 }
-
