--- a/src/components/sections/_Hero.scss
+++ b/src/components/sections/_Hero.scss
@@ -3,10 +3,6 @@
     width: 100%;
     overflow: hidden;
     position: relative;
-
-    // @include mobile {
-    //   height: 700px;
-    // }
   }
 
   &__images {
@@ -18,7 +14,6 @@
     &-main {
       width: 100%;
       max-width: 800px;
-      // filter: grayscale(100%);
 
       @include mobile {
         width: 100%;
@@ -32,6 +27,12 @@
       position: absolute;
       top: 0;
       right: 0;
+
+      @include tablet {
+        width: 300px;
+        height: 300px;
+        right: 40px;
+      }
 
       @include mobile {
         width: 200px;
@@ -48,15 +49,4 @@
       width: 100%;
     }
   }
-  // img {
-  //   max-width: 800px;
-  //   filter: grayscale(100%);
-
-  //   @include mobile {
-  //     width: 100%;
-  //     height: 100%;
-  //     object-fit: cover;
-  //     max-width: 600px;
-  //   }
-  // }
 }
