--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,5 @@
 @charset "utf-8";
 
-
 body {
   margin: 0;
   font-family: 'GowunBatang-Regular';
@@ -19,10 +18,12 @@ code {
   justify-content: center;
 }
 
+.inner-margin {
+  margin-top: 150px;
+}
+
 #root {
   width: 100%;
   height: 100%;
   background-color: $backgroundBody;
 }
-
-
