--- a/src/components/_Timer.scss
+++ b/src/components/_Timer.scss
@@ -27,6 +27,10 @@
     color: $weddingMainTextColor;
     margin-top: 10px;
 
+    @include tablet {
+      font-size: 24px;
+    }
+
     @include mobile {
       font-size: 16px;
     }
