--- a/src/components/sections/_ImageGallery.scss
+++ b/src/components/sections/_ImageGallery.scss
@@ -1,6 +1,6 @@
 .gallery {
   &__inner {
-    margin-top: 100px;
+    @extend .inner-margin;
     position: relative;
 
     @include mobile {
@@ -19,6 +19,10 @@
       font-weight: bold;
       letter-spacing: 2px;
 
+      @include tablet {
+        font-size: 30px;
+      }
+
       @include mobile {
         font-size: 28px;
       }
@@ -28,6 +32,10 @@
       color: $weddingSubTextColor;
       font-size: 30px;
 
+      @include tablet {
+        font-size: 26px;
+      }
+
       @include mobile {
         font-size: 20px;
       }
@@ -36,12 +44,15 @@
 
   &__album {
     max-height: 2000px;
-    // height: max-content;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: calc(((800px - 40px) / 2 - 10px / 2) / 16 * 10);
     gap: 10px;
     padding: 20px 20px;
+
+    @include tablet {
+      grid-auto-rows: calc(((700px - 40px) / 2 - 5px / 2) / 16 * 10);
+    }
 
     @include mobile {
       grid-auto-rows: calc(((500px - 40px) / 2 - 5px / 2) / 16 * 10);
@@ -57,6 +68,10 @@
     max-height: 900px;
     overflow: hidden;
     transition: max-height 0.5s ease-in-out;
+
+    @include tablet {
+      max-height: 800px;
+    }
 
     @include mobile {
       max-height: 500px;
@@ -90,15 +105,13 @@
   }
 
   &__btn {
+    @extend .flex-center;
     width: 100%;
     height: 50px;
     border: none;
     outline: none;
     position: relative;
     background: $backgroundWhite;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     gap: 5px;
     cursor: pointer;
 
