--- a/src/components/_CommentForm.scss
+++ b/src/components/_CommentForm.scss
@@ -27,6 +27,7 @@
       font-size: 12px;
       border-radius: 5px;
       border: 1px solid rgba(27, 31, 35, 0.15);
+      outline: none;
 
       @include mobile {
         width: 100px;
@@ -43,10 +44,15 @@
 
   &-area {
     background: transparent;
-    width: 400px;
+    width: 500px;
     height: 50px;
     border: none;
     resize: none;
+    outline: none;
+
+    @include tablet {
+      width: 100%;
+    }
 
     @include mobile {
       width: 100%;
