--- a/src/components/_Vehicle.scss
+++ b/src/components/_Vehicle.scss
@@ -18,25 +18,32 @@
       color: $weddingMainTextColor;
       font-size: 20px;
 
-      @include mobile {
+      @include tablet {
         font-size: 18px;
+      }
+
+      @include mobile {
+        font-size: 16px;
       }
     }
   }
 
   &__icon {
-    width: 32px;
-    height: 32px;
+    width: 35px;
+    height: 35px;
+    background-color: $backgroundBody;
+    padding: 5px;
+    border-radius: 50%;
+
+    @include tablet {
+      width: 30px;
+      height: 30px;
+    }
 
     @include mobile {
       width: 27px;
       height: 27px;
     }
-  }
-
-  &__icon.car {
-    width: 25px;
-    height: 25px;
   }
 
   &__item {
