--- a/src/components/sections/_GuestBook.scss
+++ b/src/components/sections/_GuestBook.scss
@@ -1,13 +1,8 @@
 .guest__book {
   &__inner {
-    @extend .flex-center;
-    margin-top: 150px;
+    @extend .flex-center, .inner-margin;
     margin-bottom: 50px;
     flex-direction: column;
-
-    @include mobile {
-      margin-top: 150px;
-    }
   }
 
   &__title {
@@ -18,6 +13,10 @@
       color: $weddingTitleColor;
       font-weight: bold;
 
+      @include tablet {
+        font-size: 30px;
+      }
+
       @include mobile {
         font-size: 28px;
       }
@@ -26,7 +25,11 @@
     &-sub {
       color: $weddingSubTextColor;
       margin-top: 5px;
-      font-size: 24px;
+      font-size: 30px;
+
+      @include tablet {
+        font-size: 26px;
+      }
 
       @include mobile {
         font-size: 20px;
@@ -50,6 +53,10 @@
     border-radius: 10px;
     max-width: 500px;
 
+    @include tablet {
+      width: 450px;
+    }
+
     @include mobile {
       width: 330px;
     }
@@ -59,6 +66,11 @@
     width: 25px;
     height: 25px;
     cursor: pointer;
+
+    @include tablet {
+      width: 23px;
+      height: 23px;
+    }
 
     @include mobile {
       width: 20px;
@@ -85,6 +97,10 @@
     border-radius: 10px;
     border: 1px solid rgba(27, 31, 35, 0.15);
 
+    @include tablet {
+      width: 450px;
+    }
+
     @include mobile {
       width: 330px;
     }
@@ -97,6 +113,10 @@
       &-name {
         color: $weddingMainTextColor;
         font-size: 20px;
+
+        @include tablet {
+          font-size: 18px;
+        }
 
         @include mobile {
           font-size: 16px;
@@ -117,6 +137,7 @@
       color: $weddingMainTextColor;
       padding: 20px;
       font-size: 16px;
+      line-height: 1.2;
 
       @include mobile {
         font-size: 14px;
@@ -143,6 +164,16 @@
     &-btn {
       width: 30px;
       height: 30px;
+
+      @include tablet {
+        width: 27px;
+        height: 27px;
+      }
+
+      @include mobile {
+        width: 25px;
+        height: 25px;
+      }
     }
   }
 }
