--- a/src/components/sections/_Navigation.scss
+++ b/src/components/sections/_Navigation.scss
@@ -1,6 +1,6 @@
 .navigation {
   &__inner {
-    margin-top: 150px;
+    @extend .inner-margin;
     margin-bottom: 50px;
     display: flex;
     flex-direction: column;
@@ -20,6 +20,10 @@
       font-size: 24px;
       font-weight: bold;
 
+      @include tablet {
+        font-size: 22px;
+      }
+
       @include mobile {
         font-size: 20px;
       }
@@ -27,7 +31,11 @@
 
     &-sub {
       color: $weddingSubTextColor;
-      font-weight: 16px;
+      font-size: 18px;
+
+      @include tablet {
+        font-size: 16px;
+      }
 
       @include mobile {
         font-size: 14px;
@@ -54,11 +62,14 @@
       gap: 15px;
       font-size: 14px;
 
+      @include mobile {
+        padding: 5px 5px;
+      }
 
       &:nth-child(1) {
         color: black;
-        border: 1px solid #F7E600;
-        background: #F7E600;
+        border: 1px solid #f7e600;
+        background: #f7e600;
       }
 
       &:nth-child(2) {
