--- a/src/components/sections/_Rsvp.scss
+++ b/src/components/sections/_Rsvp.scss
@@ -1,96 +1,115 @@
 .rsvp {
+  &__inner {
+    @extend .flex-center, .inner-margin;
+    flex-direction: column;
+    position: relative;
+  }
 
-    &__inner {
-        @extend .flex-center;
-        margin-top: 150px;
-        flex-direction: column;
-        position: relative;
+  &__title {
+    width: 100%;
+    text-align: center;
+
+    h3 {
+      color: $weddingTitleColor;
+      font-size: 36px;
+
+      @include tablet {
+        font-size: 30px;
+      }
+
+      @include mobile {
+        font-size: 28px;
+      }
     }
 
-    &__title {
-        width: 100%;
-        text-align: center;
+    p {
+      color: $weddingSubTextColor;
+      margin-top: 8px;
+      font-size: 30px;
 
-        h3 {
-            color: $weddingTitleColor;
-            font-size: 36px;
+      @include tablet {
+        font-size: 26px;
+      }
 
-            @include mobile {
-                font-size: 28px;
-            }
-        }
+      @include mobile {
+        font-size: 20px;
+      }
+    }
+  }
 
-        p {
-            color: $weddingSubTextColor;
-            margin-top: 8px;
-            font-size: 26px;
+  &__desc {
+    width: 100%;
+    margin-top: 100px;
+    font-size: 24px;
 
-            @include mobile {
-                font-size: 20px;
-            }
-        }
+    @include mobile {
+      margin-top: 50px;
     }
 
-    &__desc {
-        width: 100%;
-        margin-top: 100px;
-        font-size: 24px;
+    p {
+      color: $weddingMainTextColor;
+      text-align: center;
+      text-wrap: wrap;
+      font-size: 24px;
 
-        @include mobile {
-            margin-top: 50px;
-        }
+      @include tablet {
+        font-size: 20px;
+      }
 
-        p {
-            color: $weddingMainTextColor;
-            text-align: center;
-            text-wrap: wrap;
+      @include mobile {
+        font-size: 16px;
+        line-height: 1.2;
+      }
+    }
+  }
 
-            @include mobile {
-                font-size: 16px;
-                line-height: 1.2;
-            }
-        }
+  &__btn-box {
+    margin-top: 100px;
+    width: 100%;
+  }
+
+  &__icon {
+    width: 35px;
+    height: 35px;
+    fill: gray;
+
+    @include tablet {
+      width: 30px;
+      height: 30px;
     }
 
-    &__btn-box {
-        margin-top: 100px;
-        width: 100%;
+    @include mobile {
+      width: 20px;
+      height: 20px;
+    }
+  }
 
+  &__btn {
+    @extend .flex-center;
+    margin: 0 auto;
+    width: 200px;
+    padding: 10px;
+    gap: 10px;
+    cursor: pointer;
+    border: 1px solid $weddingMainTextColor;
+    border-radius: 10px;
+
+    @include mobile {
+      width: 150px;
+      gap: 5px;
     }
 
-    &__icon {
-        width: 35px;
-        height: 35px;
-        fill: gray;
+    span {
+      color: $weddingMainTextColor;
+      font-size: 16px;
 
-        @include mobile {
-            width: 20px;
-            height: 20px;
-        }
+      @include tablet {
+        font-size: 14px;
+      }
+
+      @include mobile {
+        font-size: 12px;
+      }
     }
-
-    &__btn {
-        @extend .flex-center;
-        margin: 0 auto;
-        width: 200px;
-        padding: 10px;
-        gap: 10px;
-        cursor: pointer;
-        border: 1px solid $weddingMainTextColor;
-        border-radius: 10px;
-
-        @include mobile {
-            width: 150px;
-            gap: 5px;
-        }
-
-        span {
-            color: $weddingMainTextColor;
-            font-size: 16px;
-
-            @include mobile {
-                font-size: 12px;
-            }
-        }
-    }
+  }
 }
