--- a/src/components/common/_Maple.scss
+++ b/src/components/common/_Maple.scss
@@ -11,6 +11,10 @@
   height: 100%;
   pointer-events: none;
 
+  @include tablet {
+    max-width: 700px;
+  }
+
   @include mobile {
     max-width: 600px;
   }
@@ -19,29 +23,46 @@
 .maple {
   position: absolute;
   top: -30px;
-  width: 30px;
-  height: 30px;
-  animation: fall linear 14s;
-
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-image: url('../../../public/assets/heart.png');
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
 }
 
-@keyframes fall {
+@keyframes fall1 {
   0% {
-    transform: translateX(0);
+    transform: translateY(0) rotate(0deg);
   }
   25% {
-    transform: translateX(500px); // 오른쪽으로 이동
+    transform: translateX(100px) translateY(25vh) rotate(90deg);
   }
   50% {
-    transform: translateX(0); // 원래 위치로
+    transform: translateX(-100px) translateY(50vh) rotate(180deg);
   }
   75% {
-    transform: translateX(-500px); // 왼쪽으로 이동
+    transform: translateX(50px) translateY(75vh) rotate(270deg);
   }
   100% {
-    transform: translateY(100vh) translateX(0); // 최종적으로 아래로 이동하며 원래 위치로 돌아옴
+    transform: translateY(100vh) rotate(360deg);
+  }
+}
+
+@keyframes fall2 {
+  0% {
+    transform: translateY(0) rotate(0deg);
+  }
+  25% {
+    transform: translateX(-80px) translateY(25vh) rotate(-90deg);
+  }
+  50% {
+    transform: translateX(80px) translateY(50vh) rotate(-180deg);
+  }
+  75% {
+    transform: translateX(-40px) translateY(75vh) rotate(-270deg);
+  }
+  100% {
+    transform: translateY(100vh) rotate(-360deg);
   }
 }
