--- a/src/components/sections/_ImageGallery.scss
+++ b/src/components/sections/_ImageGallery.scss
@@ -43,7 +43,7 @@
   }
 
   &__album {
-    max-height: 2000px;
+    // max-height: 2000px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: calc(((800px - 40px) / 2 - 10px / 2) / 16 * 10);
