--- a/src/components/_Footer.scss
+++ b/src/components/_Footer.scss
@@ -48,10 +48,12 @@
     position: relative;
     width: 100%;
     height: 500px;
-    background-image: url("https://res.cloudinary.com/dgl08y6j1/image/upload/w_1000,c_fill,g_auto/v1719941208/webp/weddingEnd.webp"); 
+    background-image: url('https://res.cloudinary.com/dgl08y6j1/image/upload/w_1000,c_fill,g_auto/v1723364521/webp/weddingEnd.webp');
     background-image: image-set(
-      url("https://res.cloudinary.com/dgl08y6j1/image/upload/w_1000,c_fill,g_auto/v1719941208/webp/weddingEnd.webp") type("image/webp")
-      url("https://res.cloudinary.com/dgl08y6j1/image/upload/w_1000,c_fill,g_auto/v1719941208/jpg/weddingEnd.jpg") type("image/jpg")
+      url('https://res.cloudinary.com/dgl08y6j1/image/upload/w_1000,c_fill,g_auto/v1723364521/webp/weddingEnd.webp')
+        type('image/webp')
+        url('https://res.cloudinary.com/dgl08y6j1/image/upload/w_1000,c_fill,g_auto/v1723364455/jpg/weddingEnd.jpg')
+        type('image/jpg')
     );
     background-position: bottom;
     background-repeat: no-repeat;
