--- a/src/components/sections/_Hero.scss
+++ b/src/components/sections/_Hero.scss
@@ -8,7 +8,7 @@
   &__images {
     width: 100%;
     box-sizing: border-box;
-    padding: 0 20px;
+    // padding: 0 10px;
     position: relative;
 
     &-main {
@@ -29,15 +29,15 @@
       right: 0;
 
       @include tablet {
-        width: 300px;
-        height: 300px;
-        right: 40px;
+        width: 250px;
+        height: 250px;
+        right: 20px;
       }
 
       @include mobile {
-        width: 200px;
-        height: 200px;
-        right: 20px;
+        width: 150px;
+        height: 150px;
+        right: 10px;
       }
     }
   }
